samples/_failures_safe/1761416350_b30dd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a76309dc.c: In function ‘main’:
./samples/SAFE/__tmp_a76309dc.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("3. Transpose Matrix A\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a76309dc.c:155:9: error: expected declaration or statement at end of input
